<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Instant</string>
    <string name="profile">Το Προφίλ Μου</string>
    <string name="findBrokers">Αναζήτηση Διαμεσολαβητή</string>
    <string name="NewInsurance">Αγορά Νέας Ασφάλειας</string>
    <string name="Accident">Δήλωση Ζημιάς</string>
    <string name="Exit">Έξοδος</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Καλώς Ήρθατε Στο νεο Tab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accident">AccidentActivity</string>
    <string name="title_activity_new_insurance">NewInsuranceActivity</string>
    <string name="title_activity_find_brokers">FindBrokersActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_accident_step1">AccidentStep1</string>
    <string name="title_activity_step1_tab">Step1Tab</string>
    <string name="title_activity_step2_fragment">Step2Fragment</string>
    <string name="title_activity_step3_fragment">Step3Fragment</string>

</resources>
